[package]
name = "stebanie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
leptos = { version = "0.4.8", features = ["csr"] }
leptos-use = { version = "0.6.2", features = ["storage"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_yaml = "0.9.25"
